[project]
name = "clubs"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "aiorwlock>=1.5.0",
    "cachetools==6.2.1",
    "email-validator>=2.2.0",
    "fastapi~=0.116.1",
    "httpx==0.28.1",
    "pydantic>=2.11.7,<3.0.0",
    "pymongo==4.14.0",
    "strawberry-graphql[debug-server]==0.278.1",
    "uvicorn==0.35.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true